feat: separate workflows for app and infrastructure

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,11 +8,17 @@ on:
       - main
     tags:
       - 'v*'
+    paths-ignore:
+      - 'terraform/**'
+      - '.github/workflows/terraform.yml'
   pull_request:
     branches:
       - develop
       - stage
       - main
+    paths-ignore:
+      - 'terraform/**'
+      - '.github/workflows/terraform.yml'
   workflow_dispatch:
 
 env:
