--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -37,6 +37,23 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Create terraform.tfvars from secrets and defaults
+        run: |
+          # Start with public configuration from example
+          cp terraform/terraform.tfvars.example terraform/terraform.tfvars
+          
+          # Add sensitive values from GitHub Secrets
+          cat >> terraform/terraform.tfvars << 'EOF'
+          
+          # Sensitive values from GitHub Secrets
+          aws_account_id = "${{ secrets.AWS_ACCOUNT_ID }}"
+          aws_region     = "${{ secrets.AWS_REGION }}"
+          github_org     = "${{ secrets.ORG_NAME }}"
+          github_repo    = "${{ secrets.REPO_NAME }}"
+          EOF
+          
+          echo "✓ terraform.tfvars created (public config + secrets)"
+
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
         with:
