--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -114,6 +114,7 @@ jobs:
   terraform-apply:
     name: Terraform Apply
     runs-on: ubuntu-latest
+    needs: terraform-plan
     if: (github.ref == 'refs/heads/main' && github.event_name == 'push') || (github.event_name == 'workflow_dispatch' && github.event.inputs.action == 'apply')
     permissions:
       contents: read
