--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -135,22 +135,22 @@ jobs:
           role-to-assume: arn:aws:iam::${{ env.AWS_ACCOUNT_ID }}:role/github-actions-ecr-role
           aws-region: ${{ env.AWS_REGION }}
 
+      - name: Create terraform.tfvars from secrets and defaults
+        run: |
+          cp terraform/terraform.tfvars.example terraform/terraform.tfvars
+          cat >> terraform/terraform.tfvars << 'EOF'
+          
+          aws_account_id = "${{ secrets.AWS_ACCOUNT_ID }}"
+          aws_region     = "${{ secrets.AWS_REGION }}"
+          github_org     = "${{ secrets.ORG_NAME }}"
+          github_repo    = "${{ secrets.REPO_NAME }}"
+          EOF
+
       - name: Terraform Init
         run: terraform -chdir=terraform init
 
-      - name: Terraform Plan (for manual apply)
-        if: github.event_name == 'workflow_dispatch'
-        run: terraform -chdir=terraform plan -out=tfplan
-
-      - name: Download plan artifact
-        if: github.event_name == 'push'
-        uses: actions/download-artifact@v4
-        with:
-          name: tfplan
-          path: terraform
-
       - name: Terraform Apply
-        run: terraform -chdir=terraform apply -auto-approve tfplan
+        run: terraform -chdir=terraform apply -auto-approve
 
       - name: Get Terraform Outputs
         id: outputs
