--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -153,7 +153,19 @@ jobs:
 
       - name: Login to Amazon ECR
         run: |
-          aws ecr get-login-password --region ${{ env.AWS_REGION }} | docker login --username AWS --password-stdin ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com
+          echo "Getting ECR login password..."
+          PASSWORD=$(aws ecr get-login-password --region ${{ env.AWS_REGION }} 2>&1)
+          if [ $? -ne 0 ]; then
+            echo "Failed to get ECR password: $PASSWORD"
+            exit 1
+          fi
+          echo "Logging in to Docker..."
+          echo "$PASSWORD" | docker login --username AWS --password-stdin ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com
+          if [ $? -ne 0 ]; then
+            echo "Docker login failed"
+            exit 1
+          fi
+          echo "Docker login successful"
 
       - name: Download Docker image
         uses: actions/download-artifact@v4
