--- a/helm/microservice/values.yaml
+++ b/helm/microservice/values.yaml
@@ -13,11 +13,10 @@ fullnameOverride: ""
 imagePullSecrets: []
 
 service:
-  type: LoadBalancer
+  type: ClusterIP
   port: 80
   targetPort: 8080
-  annotations:
-    service.beta.kubernetes.io/aws-load-balancer-type: "external"
+  annotations: {}
 
 ingress:
   enabled: false
