--- a/helm/microservice/values.yaml
+++ b/helm/microservice/values.yaml
@@ -13,7 +13,7 @@ fullnameOverride: ""
 imagePullSecrets: []
 
 service:
-  type: ClusterIP
+  type: NodePort
   port: 80
   targetPort: 8080
   annotations: {}
