--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -227,6 +227,23 @@ jobs:
             echo "  No LoadBalancers found"
           fi
           
+          # Delete Kubernetes-managed security groups
+          echo "Deleting Kubernetes-managed security groups..."
+          VPC_ID=$(aws ec2 describe-vpcs --region ${{ env.AWS_REGION }} --filters "Name=cidr,Values=10.0.0.0/26" --query "Vpcs[0].VpcId" --output text 2>/dev/null || echo "")
+          
+          if [ ! -z "$VPC_ID" ] && [ "$VPC_ID" != "None" ]; then
+            K8S_SG_IDS=$(aws ec2 describe-security-groups --region ${{ env.AWS_REGION }} --filters "Name=vpc-id,Values=$VPC_ID" "Name=group-name,Values=k8s-*" --query "SecurityGroups[*].GroupId" --output text 2>/dev/null || echo "")
+            
+            if [ ! -z "$K8S_SG_IDS" ]; then
+              for sg_id in $K8S_SG_IDS; do
+                echo "  Deleting security group: $sg_id"
+                aws ec2 delete-security-group --group-id "$sg_id" --region ${{ env.AWS_REGION }} 2>/dev/null || true
+              done
+            else
+              echo "  No Kubernetes-managed security groups found"
+            fi
+          fi
+          
           echo "✓ Kubernetes-managed resources cleaned up"
 
       - name: Terraform Destroy
