--- a/terraform/terraform.tfvars.example
+++ b/terraform/terraform.tfvars.example
@@ -24,3 +24,9 @@ node_instance_types   = ["t3.small"]
 node_desired_size     = 2
 node_min_size         = 1
 node_max_size         = 4
+
+# Security Configuration
+# Set this to your public IP address (e.g., "203.0.113.42")
+# This restricts LoadBalancer access to only your IP via Network ACL
+# Find your IP: curl https://checkip.amazonaws.com
+allowed_ip            = "0.0.0.0"  # CHANGE THIS TO YOUR IP!
