--- a/helm/microservice/values.yaml
+++ b/helm/microservice/values.yaml
@@ -16,7 +16,8 @@ service:
   type: LoadBalancer
   port: 80
   targetPort: 8080
-  annotations: {}
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
 
 ingress:
   enabled: false
