--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -351,6 +351,9 @@ jobs:
             kubectl rollout status deployment/aws-load-balancer-controller -n kube-system --timeout=5m
             echo "✓ AWS Load Balancer Controller installed successfully"
           fi
+            kubectl rollout status deployment/aws-load-balancer-controller -n kube-system --timeout=5m
+            echo "✓ AWS Load Balancer Controller installed successfully"
+          fi
 
       - name: Deploy with Helm
         run: |
