--- a/helm/aws-load-balancer-controller/templates/deployment.yaml
+++ b/helm/aws-load-balancer-controller/templates/deployment.yaml
@@ -34,12 +34,32 @@ spec:
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         args:
-          - --cluster-name=devops-aws-java-cluster
-          - --aws-region=us-east-1
+          - --cluster-name={{ .Values.clusterName }}
+          - --aws-region={{ .Values.awsRegion }}
+          - --log-level=info
         ports:
         - name: webhook
           containerPort: 8443
           protocol: TCP
+        - name: metrics
+          containerPort: 8081
+          protocol: TCP
+        livenessProbe:
+          httpGet:
+            path: /healthz
+            port: 8081
+          initialDelaySeconds: 30
+          periodSeconds: 10
+          timeoutSeconds: 5
+          failureThreshold: 3
+        readinessProbe:
+          httpGet:
+            path: /readyz
+            port: 8081
+          initialDelaySeconds: 10
+          periodSeconds: 5
+          timeoutSeconds: 3
+          failureThreshold: 3
         resources:
           {{- toYaml .Values.resources | nindent 10 }}
         securityContext:
