--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -328,6 +328,8 @@ jobs:
           echo "Checking if AWS Load Balancer Controller is already installed..."
           if kubectl get deployment -n kube-system aws-load-balancer-controller &>/dev/null; then
             echo "✓ AWS Load Balancer Controller already installed"
+            echo "Checking pod status..."
+            kubectl get pods -n kube-system -l app.kubernetes.io/name=aws-load-balancer-controller
           else
             echo "Installing AWS Load Balancer Controller..."
             
@@ -347,9 +349,10 @@ jobs:
               --set serviceAccount.annotations."eks\.amazonaws\.com/role-arn"="$ROLE_ARN" \
               --timeout 5m
             
-            echo "Waiting for AWS Load Balancer Controller to be ready..."
-            kubectl rollout status deployment/aws-load-balancer-controller -n kube-system --timeout=5m
-            echo "✓ AWS Load Balancer Controller installed successfully"
+            echo "Waiting for AWS Load Balancer Controller pods to start..."
+            sleep 10
+            kubectl get pods -n kube-system -l app.kubernetes.io/name=aws-load-balancer-controller
+            echo "✓ AWS Load Balancer Controller deployed"
           fi
             kubectl rollout status deployment/aws-load-balancer-controller -n kube-system --timeout=5m
             echo "✓ AWS Load Balancer Controller installed successfully"
