--- a/.github/workflows/phase-2-eks.yml
+++ b/.github/workflows/phase-2-eks.yml
@@ -52,7 +52,7 @@ jobs:
           vpc_cidr = "10.0.0.0/26"
           
           # Node Configuration
-          node_instance_types = ["t3.medium"]
+          node_instance_types = ["t3.small"]
           node_desired_size   = 2
           node_min_size       = 1
           node_max_size       = 4
@@ -130,7 +130,7 @@ jobs:
           vpc_cidr = "10.0.0.0/26"
           
           # Node Configuration
-          node_instance_types = ["t3.medium"]
+          node_instance_types = ["t3.small"]
           node_desired_size   = 2
           node_min_size       = 1
           node_max_size       = 4
@@ -348,7 +348,7 @@ jobs:
           vpc_cidr = "10.0.0.0/26"
           
           # Node Configuration
-          node_instance_types = ["t3.medium"]
+          node_instance_types = ["t3.small"]
           node_desired_size   = 2
           node_min_size       = 1
           node_max_size       = 4
