--- a/terraform/phase-2-eks/terraform.tfvars.example
+++ b/terraform/phase-2-eks/terraform.tfvars.example
@@ -12,7 +12,7 @@ kubernetes_version = "1.30"
 vpc_cidr = "10.0.0.0/26"
 
 # Node Configuration
-node_instance_types = ["t3.medium"]
+node_instance_types = ["t3.small"]
 node_desired_size   = 2
 node_min_size       = 1
 node_max_size       = 4
