--- a/.github/workflows/phase-2-eks.yml
+++ b/.github/workflows/phase-2-eks.yml
@@ -201,10 +201,17 @@ jobs:
           
           echo "Using role: $ROLE_ARN"
           
+          # Create a values override file
+          cat > /tmp/alb-controller-values.yaml << EOF
+          serviceAccount:
+            annotations:
+              eks.amazonaws.com/role-arn: $ROLE_ARN
+          EOF
+          
           # Deploy AWS Load Balancer Controller via Helm
           helm upgrade --install aws-load-balancer-controller helm/aws-load-balancer-controller \
             --namespace kube-system \
-            --set 'serviceAccount.annotations.eks\.amazonaws\.com/role-arn'="$ROLE_ARN" \
+            -f /tmp/alb-controller-values.yaml \
             --timeout 5m
           
           echo "Waiting for AWS Load Balancer Controller pods to start..."
