--- a/.github/workflows/phase-3-deploy-app.yml
+++ b/.github/workflows/phase-3-deploy-app.yml
@@ -329,56 +329,14 @@ jobs:
           echo "Installing AWS Load Balancer Controller..."
           
           # Get the Load Balancer Controller role ARN
-          ROLE_ARN=$(aws iam list-roles --query "Roles[?RoleName=='AmazonEKSLoadBalancerControllerRole'].Arn" --output text)
+          ROLE_ARN=$(aws iam list-roles --query "Roles[?RoleName=='devops-aws-java-cluster-load-balancer-controller-role'].Arn" --output text)
           
           if [ -z "$ROLE_ARN" ]; then
-            echo "Creating IAM role and policy for Load Balancer Controller..."
-            
-            # Download and create IAM policy
-            curl -O https://raw.githubusercontent.com/kubernetes-sigs/aws-load-balancer-controller/v2.14.1/docs/install/iam_policy.json
-            aws iam create-policy \
-              --policy-name AWSLoadBalancerControllerIAMPolicy \
-              --policy-document file://iam_policy.json 2>/dev/null || true
-            rm iam_policy.json
-            
-            # Get OIDC provider
-            OIDC_ID=$(aws eks describe-cluster --name ${{ env.AWS_REGION }} --query 'cluster.identity.oidc.issuer' --output text | cut -d'/' -f5)
-            
-            # Create trust policy
-            TRUST_POLICY=$(cat <<EOF
-{
-  "Version": "2012-10-17",
-  "Statement": [
-    {
-      "Effect": "Allow",
-      "Principal": {
-        "Federated": "arn:aws:iam::${{ env.AWS_ACCOUNT_ID }}:oidc-provider/oidc.eks.${{ env.AWS_REGION }}.amazonaws.com/id/$OIDC_ID"
-      },
-      "Action": "sts:AssumeRoleWithWebIdentity",
-      "Condition": {
-        "StringEquals": {
-          "oidc.eks.${{ env.AWS_REGION }}.amazonaws.com/id/$OIDC_ID:sub": "system:serviceaccount:kube-system:aws-load-balancer-controller",
-          "oidc.eks.${{ env.AWS_REGION }}.amazonaws.com/id/$OIDC_ID:aud": "sts.amazonaws.com"
-        }
-      }
-    }
-  ]
-}
-EOF
-)
-            
-            # Create role
-            aws iam create-role \
-              --role-name AmazonEKSLoadBalancerControllerRole \
-              --assume-role-policy-document "$TRUST_POLICY"
-            
-            # Attach policy
-            aws iam attach-role-policy \
-              --role-name AmazonEKSLoadBalancerControllerRole \
-              --policy-arn arn:aws:iam::${{ env.AWS_ACCOUNT_ID }}:policy/AWSLoadBalancerControllerIAMPolicy
-            
-            ROLE_ARN="arn:aws:iam::${{ env.AWS_ACCOUNT_ID }}:role/AmazonEKSLoadBalancerControllerRole"
+            echo "⚠ Load Balancer Controller role not found, skipping installation"
+            exit 0
           fi
+          
+          echo "Using role: $ROLE_ARN"
           
           # Create service account with IRSA annotation
           kubectl delete serviceaccount -n kube-system aws-load-balancer-controller --ignore-not-found=true
@@ -395,9 +353,9 @@ EOF
             --set clusterName=devops-aws-java-cluster \
             --set serviceAccount.create=false \
             --set serviceAccount.name=aws-load-balancer-controller \
-            --timeout 10m
+            --timeout 10m || echo "⚠ Load Balancer Controller installation failed, continuing with basic LoadBalancer"
           
-          echo "✓ Load Balancer Controller deployed"
+          echo "✓ Load Balancer Controller deployment attempted"
 
       - name: Deploy with Helm
         run: |
@@ -413,8 +371,7 @@ EOF
           helm upgrade --install microservice infrastructure/helm/microservice \
             -f infrastructure/helm/microservice/values-prod.yaml \
             --set image.registry=${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com \
-            --set imagePullSecrets[0].name=ecr-secret \
-            --set service.annotations."service\.beta\.kubernetes\.io/aws-load-balancer-scheme"=internet-facing \
+            --set service.type=LoadBalancer \
             --timeout 15m
           
           echo "Waiting for deployment to be ready..."
